--- a/resume/03_ファイルとディレクトリ.md
+++ b/resume/03_ファイルとディレクトリ.md
@@ -1,1 +1,29 @@
 
+## ファイルとディレクトリ
+
+### サーバー内にあるデータの種類
+ - テキストファイル （Windowsでいう.txtと同じ）
+ - ディレクトリ （Windowsでいうフォルダと同じ）
+
+###### :bulb: 参考
+ - バイナリファイル （画像や音声ファイルなど）
+ - シンボリックリンク （Windowsでいうショートカットファイル）
+
+### 一般的なLinuxのディレクトリ構成
+|ディレクトリ名|役割|よく使う|
+|:---|:---|:---:|
+|/ | ルートディレクトリ（大元） |●|
+|/bin | 基本コマンドが入っている |●|
+|/boot | 起動に必要なファイルが入っている ||
+|/dev | デバイスファイルが入っている ||
+|/etc | 設定ファイル |●|
+|/home | ユーザー用のディレクトリが入っている |●|
+|/lib | 共有ライブラリが入っている ||
+|/mnt | 一般的な外部ディスクのマウントポイント ||
+|/opt | 追加アプリケーション ||
+|/proc | プロセス情報など ||
+|/root | rootユーザー用ディレクトリ |●|
+|/sbin | システム管理用コマンド ||
+|/tmp | 一時ファイル ||
+|/usr | 各種プログラムなど ||
+|/var | ログやデータベースファイルなどの可変データ |●|
