--- a/resume/03_ファイルとディレクトリ.md
+++ b/resume/03_ファイルとディレクトリ.md
@@ -8,6 +8,14 @@
 ###### :bulb: 参考
  - バイナリファイル （画像や音声ファイルなど）
  - シンボリックリンク （Windowsでいうショートカットファイル）
+ 
+### サーバー内のファイルやディレクトリを表示してみる
+ - Cloud9のターミナルで `ls` と打ってみましょう。今自分がいるディレクトリの中のファイルとディレクトリがが一覧表示されます
+ - 次は `ls -l` と打ちましょう。同じ一覧表示でも表示の仕方が違います。この `-l` の部分をコマンドのオプションと呼びます
+ - `man ls` と打ってみましょう。lsコマンドに関する説明が表示されます。先ほどの `-l` の説明を読んでみましょう。
+ 
+### ディレクトリを移動してみる
+
 
 ### 一般的なLinuxのディレクトリ構成
 |ディレクトリ名|役割|よく使う|
