--- a/resume/03_ファイルとディレクトリ.md
+++ b/resume/03_ファイルとディレクトリ.md
@@ -10,12 +10,14 @@
  - シンボリックリンク （Windowsでいうショートカットファイル）
  
 ### サーバー内のファイルやディレクトリを表示してみる
- - Cloud9のターミナルで `ls` と打ってみましょう。今自分がいるディレクトリの中のファイルとディレクトリがが一覧表示されます
+ - Cloud9のターミナルで `ls` と打ってみましょう。今自分がいるディレクトリの中のファイルとディレクトリが一覧表示されます
  - 次は `ls -l` と打ちましょう。同じ一覧表示でも表示の仕方が違います。この `-l` の部分をコマンドのオプションと呼びます
  - `man ls` と打ってみましょう。lsコマンドに関する説明が表示されます。先ほどの `-l` の説明を読んでみましょう。
  
 ### ディレクトリを移動してみる
-
+ - まずは `pwd` と打ちましょう。今自分がいるディレクトリの場所が表示されます
+ - `cd ` のようにcdのあとに半角スペースを入れてTabキーを2回打ちましょう。移動できる直下のディレクトリが一覧表示されますので好きなディレクトリを `cd hoge` のように入れてコマンドを叩きます。移動できましたか？
+ 
 
 ### 一般的なLinuxのディレクトリ構成
 |ディレクトリ名|役割|よく使う|
