--- a/resume/03_ファイルとディレクトリ.md
+++ b/resume/03_ファイルとディレクトリ.md
@@ -19,6 +19,21 @@
 ### ディレクトリを移動してみる
  - まずは `pwd` と打ちましょう。今自分がいるディレクトリの場所が表示されます。
  - `cd ` のようにcdのあとに半角スペースを入れてTabキーを2回打ちましょう。移動できる直下のディレクトリが一覧表示されますので好きなディレクトリを `cd hoge` のように入れてコマンドを叩きます。移動できましたか？
+
+<br />
+### 絶対パスと相対パス
+ - 自分がいる場所から、別の場所を指定すると、それは**相対パス**となります。
+ ```
+../app/
+```
+###### :bulb: 参考
+ - ドットが2つ（../）は今自分がいるディレクトリの**1階層上**を指します
+ - ドットが1つ（./）は今自分がいるディレクトリを指します
+
+ - 自分がいる場所に関係なく、 / (ルートディクトリ)から指定した場所は**絶対パス**となります。
+ ```
+ /home/ubuntu/workspace/app/
+ ```
  
 <br />
 ### 一般的なLinuxのディレクトリ構成
