--- a/resume/03_ファイルとディレクトリ.md
+++ b/resume/03_ファイルとディレクトリ.md
@@ -23,12 +23,12 @@
 <br />
 ### 絶対パスと相対パス
  - 自分がいる場所から、別の場所を指定すると、それは**相対パス**となります。
- ```
+```
 ../app/
 ```
 ###### :bulb: 参考
- - ドットが2つ（../）は今自分がいるディレクトリの**1階層上**を指します
- - ドットが1つ（./）は今自分がいるディレクトリを指します
+ドットが2つ（../）は今自分がいるディレクトリの**1階層上**を指します  
+ドットが1つ（./）は今自分がいるディレクトリを指します  
 
  - 自分がいる場所に関係なく、 / (ルートディクトリ)から指定した場所は**絶対パス**となります。
  ```
