--- a/resume/03_ファイルとディレクトリ.md
+++ b/resume/03_ファイルとディレクトリ.md
@@ -22,18 +22,20 @@
 
 <br />
 ### 絶対パスと相対パス
- - 自分がいる場所から、別の場所を指定すると、それは**相対パス**となります。
+ - 自分がいる場所から別の場所を指定すると、それは**相対パス**となります。
 ```
 ../app/
+
+(今自分がいる場所：/home/ubuntu/workspace/config)
 ```
 ###### :bulb: 参考
 ドットが2つ（../）は今自分がいるディレクトリの**1階層上**を指します  
 ドットが1つ（./）は今自分がいるディレクトリを指します  
 
- - 自分がいる場所に関係なく、 / (ルートディクトリ)から指定した場所は**絶対パス**となります。
- ```
+ - 自分がいる場所に関係なく、 / (ルートディクトリ)から指定した場所は**絶対パス**となります。下の絶対パスは、上述の相対パスと**同じ場所を指しています**
+```
  /home/ubuntu/workspace/app/
- ```
+```
  
 <br />
 ### 一般的なLinuxのディレクトリ構成
