--- a/resume/03_ファイルとディレクトリ.md
+++ b/resume/03_ファイルとディレクトリ.md
@@ -1,34 +1,34 @@
 
-## 03_ファイルとディレクトリ
+# 03_ファイルとディレクトリ
 
-### サーバー内にあるデータの種類
+## サーバー内にあるデータの種類
  - テキストファイル （Windowsでいう.txtと同じ）
  - ディレクトリ （Windowsでいうフォルダと同じ）
 
-###### :bulb: 参考
+##### 参考
  - バイナリファイル （画像や音声ファイルなど）
  - シンボリックリンク （Windowsでいうショートカットファイル）
  
 <br />
-### サーバー内のファイルやディレクトリを表示してみる
+## サーバー内のファイルやディレクトリを表示してみる
  - Cloud9のターミナルで `ls` と打ってみましょう。今自分がいるディレクトリの中のファイルとディレクトリが一覧表示されます。
  - 次は `ls -l` と打ちましょう。同じ一覧表示でも表示の仕方が違います。この `-l` の部分をコマンドのオプションと呼びます。
  - `man ls` と打ってみましょう。lsコマンドに関する説明が表示されます。先ほどの `-l` の説明を読んでみましょう。
  
 <br />
-### ディレクトリを移動してみる
+## ディレクトリを移動してみる
  - まずは `pwd` と打ちましょう。今自分がいるディレクトリの場所が表示されます。
  - `cd ` のようにcdのあとに半角スペースを入れてTabキーを2回打ちましょう。移動できる直下のディレクトリが一覧表示されますので好きなディレクトリを `cd hoge` のように入れてコマンドを叩きます。移動できましたか？
 
 <br />
-### 絶対パスと相対パス
+## 絶対パスと相対パス
  - 自分がいる場所から別の場所を指定すると、それは**相対パス**となります。
 ```
 ../app/
 
 (今自分がいる場所：/home/ubuntu/workspace/config)
 ```
-###### :bulb: 参考
+##### 参考
 ドットが2つ（../）は今自分がいるディレクトリの**1階層上**を指します  
 ドットが1つ（./）は今自分がいるディレクトリを指します  
 
@@ -38,7 +38,7 @@
 ```
  
 <br />
-### 一般的なLinuxのディレクトリ構成
+## 一般的なLinuxのディレクトリ構成
 |ディレクトリ名|役割|よく使う|
 |:---|:---|:---:|
 |/ | ルートディレクトリ（大元） |●|
