--- a/resume/01_OSとは.md
+++ b/resume/01_OSとは.md
@@ -6,8 +6,7 @@
 - OSという、パソコンの基本ソフトウェアをパソコンにインストールすることで、様々ソフトウェアが使えるようになるし、インターネットもできるようになる
 - 世界で一番シェアがあるのはWindows
 
-# 図1-1
-
+<img src="images/os_all.jpeg">
 
 ## OSの仕組み
 - 普段何気なく動作していることを解説
@@ -16,7 +15,7 @@
 例えば、Microsoft社のWordやExcelというソフトウェアは、WindowsというOSの上で動作している。これらのソフトウェアはあくまで「OS上で」動作している。
 なので、ソフトウェア(例:Word)は、OS(例:Windows)がないと動作しない。
 
-# 図1-2
+<img src="images/os_win.jpeg">
 
 ### Linuxの場合
 Linuxの場合でも、構造は同じ。
@@ -24,7 +23,7 @@ Linuxの場合でも、構造は同じ。
 
 ※ApacheやMySQLについてはここでは解説しない
 
-# 図1-3
+<img src="images/os_linux.jpeg">
 
 ## ここまでのまとめ
 - OSとはOperatingSystemのこと
@@ -71,36 +70,15 @@ Distribution)」と呼びます。
 
 | 名称 | 系統 | 概要 |
 |:------:|:------:|:------:|
-
-
-## UnixとLinux
-Unixがもともとあって
-リーナス・トーバルズがUNIXをもとにLinuxをつくった
-だからあんまり気にしないこと
-
-
-
-
-# ディストリビューション
-
-## ディストリビューションとは
-Linuxカーネル(後述)とソフトウェアをパッケージとしてまとめて
-
-
-
-
-# あとで
-## シェルとカーネルの話いる？
-## Linuxのライセンス
-## ディストリビューション
-## UNIXとの違い
-## カーネルの働き
-# 図1-4. カーネルの図解
-
+| RedHat Enterprise Linux(RHEL) | RedHat系 | RedHay社の商用製品。企業の業務用で使われるなどシェアが多い。|
+| CentOS | RedHat系 | RedHat Enterprise Linux をベースとしたもの。中身はほぼ同一で無償で利用できる。|
+| Fedora | RedHat系 | FedoraはRed Hat社の支援を受けたプロジェクトによって開発が進められている実験的な要素の強いディストリビューションです。Fedoraの試験運用で得られた成果はRed Hat Enterprise Linux(RHEL)に還元されるという仕組みです。|
+| Debian GNU/Linux | Debian系 | Debianプロジェクトで開発が行われている。|
+| Ubuntu | Debian系 | Debian GNU/Linuxベースで開発されているもの。無償で利用できる。|
 
 ## Linuxを学ぶにあたって
 Linuxの概観をなんとなく掴んだら(まだイマイチ掴めてなくても大丈夫！)、しばらくはコマンドラインでの操作を覚えていくことになります。
-より具体的には、ターミナルにひたすらコマンドを打ち込んでは結果を書くという流れになります。
+より具体的には、ターミナルにひたすらコマンドを打ち込んでは結果を確認するという流れになります。
 
 
 
