--- a/resume/04_お役立ちコマンドなど.md
+++ b/resume/04_お役立ちコマンドなど.md
@@ -17,7 +17,6 @@
 - slコマンドで汽車を走らせよう
 - コマンドによるカーソル移動
 
-
 ## Tabによる入力補完
 Tabキーを利用するとパスの入力補完ができます。Tabキーを押してパス名が一意に定まる場合はそのパス名を表示し、複数の候補がある場合はその候補軍を表示してくれます。これにより長いパスになっても素早くかつミスを抑えて入力することができます。
 
@@ -51,7 +50,7 @@ $ history
 $ !2
 ls
 README.md  test.txt
-``
+```
 
 ### Control + r_コマンド履歴の検索(リバースサーチ)
 上記テクニックを利用すれば、過去のコマンドを遡ったり、再実行することができるようになります。しかし、実行したコマンドの数が増えていくといちいち↑キーやhistoryから辿るのは困難になります。そこで便利なのがリバースサーチ(「Control + r」)です。<br>
@@ -164,7 +163,7 @@ Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa
 16 17 18 19 20 21 22  20 21 22 23 24 25 26  18 19 20 21 22 23 24
 23 24 25 26 27 28 29  27 28 29 30           25 26 27 28 29 30 31
 30 31
-`
+```
 
 ## マニュアル表示(man)
 manは指定したコマンドのマニュアルを表示するコマンドです。基本的な使い方やオプションなどを表示することができます。スクロールや終了については、基本的にはlessコマンド実行時と同一です。<br>
@@ -216,82 +215,16 @@ DESCRIPTION
        --version
               output version information and exit
 
-       With no FILE, or when FILE is -, read standard input.
-
-EXAMPLES
-       cat f - g
-              Output f's contents, then standard input, then g's contents.
-
-       cat    Copy standard input to standard output.
-
-CAT(1)                                               User Commands                                               CAT(1)
-
-NAME
-       cat - concatenate files and print on the standard output
-
-SYNOPSIS
-CAT(1)                                               User Commands                                               CAT(1)
-
-NAME
-       cat - concatenate files and print on the standard output
-
-SYNOPSIS
-CAT(1)                                               User Commands                                               CAT(1)
-
-NAME
-       cat - concatenate files and print on the standard output
-
-SYNOPSIS
-       cat [OPTION]... [FILE]...
-
-DESCRIPTION
-       Concatenate FILE(s), or standard input, to standard output.
-
-       -A, --show-all
-              equivalent to -vET
-
-       -b, --number-nonblank
-              number nonempty output lines, overrides -n
-
-       -e     equivalent to -vE
-
-       -E, --show-ends
-              display $ at end of each line
-
-       -n, --number
-              number all output lines
-
-       -s, --squeeze-blank
-              suppress repeated empty output lines
-
-       -t     equivalent to -vT
-
-       -T, --show-tabs
-              display TAB characters as ^I
-
-       -u     (ignored)
-
-       -v, --show-nonprinting
-              use ^ and M- notation, except for LFD and TAB
-
-       --help display this help and exit
-
-       --version
-              output version information and exit
-
-       With no FILE, or when FILE is -, read standard input.
-
-EXAMPLES
-       cat f - g
-              Output f's contents, then standard input, then g's contents.
-
-       cat    Copy standard input to standard output.
+### 長いので省略 ###
 ```
 
 ## エイリアス表示(alias)
 よく使うコマンドに別名を付けて、素早く実行することができます。
 
 ### aliasコマンドの構文
+
+```bash
+$ alias <エイリアス名>='<コマンド>'
 
 ### 実際に使ってみる
 `ls -l`を`ll`、`ls -a`を`la`で入力できるようにします。<br>
@@ -346,6 +279,7 @@ bash: unalias: ll: not found
 $ whoami
 ubuntu
 ```
+
 ## 継続実行(watch)
 `watch`コマンドを使うと、あるコマンドを一定の時間ごとに実行して結果を端末にスクロールさせずに固定で表示することができます。ログファイルの監視などで使います。<br>
 gif画像でその動きを確認してみましょう。下記の画像は、watchで監視モードに入っている状態で、「README.mdの削除」と「sample.txt作成」を行っています。<br>
