--- a/resume/04_お役立ちコマンドなど.md
+++ b/resume/04_お役立ちコマンドなど.md
@@ -283,6 +283,7 @@ ubuntu
 ## 継続実行(watch)
 `watch`コマンドを使うと、あるコマンドを一定の時間ごとに実行して結果を端末にスクロールさせずに固定で表示することができます。ログファイルの監視などで使います。<br>
 gif画像でその動きを確認してみましょう。下記の画像は、watchで監視モードに入っている状態で、「README.mdの削除」と「sample.txt作成」を行っています。<br>
+監視モードは「Control + c」で終了できます。<br>
 
 <img src="images/watch.gif">
 
