--- a/resume/05_ユーザーとグループ.md
+++ b/resume/05_ユーザーとグループ.md
@@ -102,7 +102,7 @@ $ ls -l /bin/cat
 -rwxr-xr-x 1 root root 47904 Dec  3  2015 /bin/cat*
 ```
 
-# 画像
+<img src="images/cat-owner.png">
 
 出力結果の3列目と4列目にファイルのオーナーおよびファイルの所属グループが表示されます(グループやその他の情報については後述します)。<br>
 つまり、この`/bin/cat`というファイルは`root`ユーザがオーナーで、`root`というグループに所属しているということになります。<br>
@@ -145,14 +145,14 @@ chown
 続いてファイルのパーミッションの話です。パーミッションとはアクセス権限、すなわち「**誰にどのような操作を許可するか**」という見解を規定する情報を意味します。ファイルのパーミッションも`ls -l`で確認することができます。<br>
 先程確認した`/bin/cat`をもう一度見てみましょう。<br>
 
-# 画像
+<img src="images/cat-permission.png">
 
 今回は`-rwxr-xr-x`の部分に注目します。<br>
 まず先頭の「-」ですが、これはファイルの種類を意味します。「-」は通常ファイル、「d」はディレクトリ、「l」はシンボリックリンクです。<br>
 次に`rwxr-xr-x`ですが、これは、`rwx` `r-x` `r-x`という3文字ごとに1つのブロックになっており、それぞれが「オーナー」「グループ」「その他のユーザ」に対するパーミッション(アクセス権限)を意味します。<br>
 
 
-# 画像
+<img src="images/permissions.png">
 
 「r」「w」「x」「-」それぞれの意味は下記のとおりです。<br>
 
@@ -300,7 +300,7 @@ total 2
 drwxrwxr-x 2 ubuntu ubuntu 4096 Oct 10 08:34 dir3/
 ```
 
-# 画像
+<img src="images/chmod_gw.png">
 
 
 ### 読み込み権限削除
@@ -367,5 +367,6 @@ total 0
 -rwxr-xr-x 1 ubuntu ubuntu 0 Oct 10 09:00 index.html*
 ```
 
+<img src="images/chmod_755.png">
 
 ## 【WIP】umaskコマンド_パーミッションのマスク
