--- a/resume/01_OSとは.md
+++ b/resume/01_OSとは.md
@@ -60,7 +60,7 @@ Distribution)」と呼びます。<br>
 
 | 名称 | 系統 | 概要 |
 |:------:|:------:|:------:|
-| RedHat Enterprise Linux(RHEL) | RedHat系 | RedHay社の商用製品。企業の業務用で使われるなどシェアが多い。|
+| RedHat Enterprise Linux(RHEL) | RedHat系 | RedHat社の商用製品。企業の業務用で使われるなどシェアが多い。|
 | CentOS | RedHat系 | RedHat Enterprise Linux をベースとしたもの。中身はほぼ同一で無償で利用できる。|
 | Fedora | RedHat系 | FedoraはRed Hat社の支援を受けたプロジェクトによって開発が進められている実験的な要素の強いディストリビューションです。Fedoraの試験運用で得られた成果はRed Hat Enterprise Linux(RHEL)に還元されるという仕組みです。|
 | Debian GNU/Linux | Debian系 | Debianプロジェクトで開発が行われている。|
