--- a/resume/03_ファイル管理.md
+++ b/resume/03_ファイル管理.md
@@ -390,3 +390,10 @@ $ ls -l
 total 4
 -rw-r--r-- 1 ubuntu ubuntu 51 Oct  9 18:40 compression.txt.gz
 ```
+
+<br />
+## 確認問題
+1) `/etc/passwd` ファイルを `cat` `more` `less` でそれぞれ見てみましょう。
+
+## 答え
+2) `cat /etc/passwd` `more /etc/passwd` `less /etc/passwd`
