--- a/resume/03_ファイル管理.md
+++ b/resume/03_ファイル管理.md
@@ -395,5 +395,11 @@ total 4
 ## 確認問題
 1) `/etc/passwd` ファイルを `cat` `more` `less` でそれぞれ見てみましょう。
 
+2) `origin.txt` を作って中に `origin` と書いて保存してください。 そのファイルのシンボリックリンクを `origin.link` として同じディレクトリ内に作成してください。最後に作成したシンボリックリンクを `cat` で開いて内容が表示されるか確認してください。
+
+3) 
+
 ## 答え
-2) `cat /etc/passwd` `more /etc/passwd` `less /etc/passwd`
+1) `cat /etc/passwd` `more /etc/passwd` `less /etc/passwd`
+
+2) `vi origin.txt` `ln -s origin.txt origin.link` `cat origin.link`
