「ユーザーとグループ」と「パーミッション」に切り分け

--- a/resume/05_ユーザーとグループ.md
+++ b/resume/05_ユーザーとグループ.md
@@ -1,36 +1,6 @@
 # ユーザとグループ
 
 ## はじめに
-ユーザとグループについて学習します。
-
-## 【WIP】残り項目
-- [済]root ユーザーの利用
-- [済]グループ概要
-- [済]ユーザーとグループの管理
-- [済]ユーザーのパスワード変更
-- [済]ユーザー変更
-- [済]ファイルの所有者と所有グループ
-- [済]所有者と所有グループの変更
-- [済]ファイルとディレクトリのアクセス権
-- [済]パーミッションの変更
-
-## 【WIP】残りコマンド
-- [済]id
-- [済]useradd -> adduser
-- [済]userdel -> deluser
-- [未]passwd
-- [済]groupadd -> addgroup
-- [済]groupdel -> delgroup
-- [済]sudo
-- [済]/etc/passwd
-- [済]/etc/group
-- [済]ls -l
-- [済]chown
-- [済]chmod
-- [済]umask
-- [済]visudo
-
-## 前置き
 Linuxは、1つのマシンへ複数のユーザが同時にログインして操作することを前提として作られています。ということは、秘密にしておきたいファイルを他のユーザに見られてしまっては困ってしまいますし、意図せず他のユーザのファイルを書き換えてしまうことを防ぐ必要もあります。そういったファイル保護を実現するためのアクセス権限や各種ユーザについて解説します。
 
 ## ユーザの種類
@@ -347,7 +317,7 @@ Removing group `guests' ...
 Done.
 ```
 
-## 【WIP】chownコマンドとchgrpコマンド_所有者と所有グループの変更
+## chownコマンドとchgrpコマンド_所有者と所有グループの変更
 次にファイルの所有者およびグループの変更を見ていきます。<br>
 使用するコマンドは`chown`と`chgrp`で、それぞれの意味や構文は下記の表のとおりです。<br>
 
@@ -646,7 +616,7 @@ total 0
 
 <img src="images/chmod_755.png">
 
-## 【WIP】umaskコマンド_パーミッションのマスク
+## umaskコマンド_パーミッションのマスク
 作成されるファイルやディレクトリのパーミッションはあらかじめ設定されており、それを**パーミッションのマスク**と呼びます。この仕組みがあるため、特に何もしていなければ、作成ファイルのパーミッションは**644**(**rw-r--r--**)になっているわけです。
 
 ```bash
