見出し修正など

--- a/resume/05_ユーザーとグループ.md
+++ b/resume/05_ユーザーとグループ.md
@@ -31,7 +31,7 @@ root:*:16819:0:99999:7:::
 # 以下省略
 ```
 
-## ユーザの作成
+## adduserコマンド_ユーザの作成
 次にユーザの作成について見ていきましょう。<br>
 ユーザの作成は`adduser <ユーザ名>`というコマンドを実行すればOKです。ただし、スーパーユーザの権限が必要なのでsudoを利用します。今回は`elites`というユーザを作ってみましょう。<br>
 コマンドを実行したら、まずパスワードを入力します。この際、**キー入力しても画面は変わらない**ですが、実際には入力されているので問題ありません。また、次にフルネームなどの情報を記入する状態になりますが、これらは空欄のままEnterでOKです。<br>
@@ -57,7 +57,7 @@ Enter the new value, or press ENTER for the default
 Is the information correct? [Y/n] Y
 ```
 
-## ユーザ情報の確認
+## ユーザ情報の一覧
 adduserコマンドによって追加したelitesというユーザの情報を確認してみましょう。ユーザの情報は`/etc/passwd`ファイル内に記述されているので、lessコマンドを使って中身を見てみます。<br>
 詳しくは解説しませんが、ユーザ名やユーザID、グループID、ホームディレクトリ(elitesユーザの場合、`/home/elites`)などの情報が記述されています。<br>
 
@@ -101,7 +101,7 @@ elites@mohira-test-3778865:/home/ubuntu/workspace$ id ubuntu
 uid=1000(ubuntu) gid=1000(ubuntu) groups=1000(ubuntu),27(sudo),1001(rvm)
 ```
 
-## ユーザのパスワードの変更
+## passwdコマンド_ユーザのパスワードの変更
 ユーザのパスワードを変更する場合は`passwd <ユーザ名>`というコマンドを使えばOKです。カレントユーザの変更であればオプションは不要ですが、別のユーザのパスワードを変更する場合はユーザ名を指定します(ただし、権限がないと変更できません)。<br>
 では、elitesというユーザのパスワードを変更してみましょう。<br>
 
@@ -114,7 +114,7 @@ Retype new UNIX password:
 passwd: password updated successfully
 ```
 
-## ユーザの削除 deluser
+## deluserコマンド_ユーザの削除
 続いてユーザの削除をしてみましょう。ユーザの削除は`deluser <ユーザ名>`でOKです。ただし、誰でもユーザを削除できてしまうと危険なので、sudoが必要です。<br>
 特にオプションを付けずに実行すると、ユーザのみが削除され、ユーザ作成時に自動で生成されるホームディレクトリ(`/home/elites`ディレクトリ)は削除されません。そのため、`--remove-home`というオプションをつけて実行しましょう。
 
@@ -218,7 +218,6 @@ root    ALL=(ALL:ALL) ALL
 #includedir /etc/sudoers.d
 ```
 
-
 ### visudo_sudoersファイルを編集する
 次に、nowallというユーザにsudoの権限を与えてみましょう。<br>
 sudoの設定は`/etc/sudoers`に記述されていますが、**`/etc/sudoers`を直接viやnanoで編集してはいけません**。誤った書き方をしてしまうと、どのユーザもsudoを利用できなくなってしまう可能性があるためです。こうなってしまうと、`/etc/sudoers`を編集するにはスーパーユーザの権限が必要なので、二度とスーパーユーザの権限を取得できない状態になってしまいます。<br>
@@ -286,7 +285,7 @@ $ groups
 ubuntu sudo rvm
 ```
 
-## グループの作成
+## addgroupコマンド_グループの作成
 ここからはグループの作成や切り替え、削除について見ていきます。ユーザの場合とおおよそ同じです。<br>
 <br>
 グループの追加は`addgroup <グループ名>`でOKですが、sudoが必要となります。
@@ -295,7 +294,8 @@ ubuntu sudo rvm
 $ sudo addgroup guests
 Adding group `guests' (GID 1003) ...
 Done.
-```済
+```
+
 グループの情報は`/etc/group`に記述されています。<br>
 
 ```bash
@@ -304,10 +304,9 @@ root:x:0:
 
 ### 省略 ###
 nowall:x:1002:
-gueadduseradd -> user003:userdel ->
-``groupagroupdel -> dd -> `
+```
 
-##addgroup
+## delgroup_グループの削除
 グループの削除は`delgroup <グループ名>`でOKです。<br>
 再度`/etc/group`を確認するとguestsグループが削除されているはずです。<br>
 
@@ -363,11 +362,16 @@ total 0
 -rw-r--r-- 1 root   ubuntu 0 Oct 16 03:11 sample1
 -rw-r--r-- 1 ubuntu nowall 0 Oct 16 03:11 sample2
 -rw-r--r-- 1 root   root   0 Oct 16 03:11 sample3
+
+$ cd ..
+$ ls -l
+$ sudo chown -R ubuntu:ubuntu chown_test
+$ ls -l
+total 0
+-rw-r--r-- 1 ubuntu ubuntu 0 Oct 16 03:11 sample1
+-rw-r--r-- 1 ubuntu ubuntu 0 Oct 16 03:11 sample2
+-rw-r--r-- 1 ubuntu ubuntu 0 Oct 16 03:11 sample3
 ```
-cd ..
-ls -l
-sudo chown -R ubuntu:ubuntu chown_test
-ls -l
 
 ### 特定のディレクトリの所有者を一気に変更する
 単体のファイルの所有者などを変更する場合は、先に書いたようなコマンドを実行すればOKですが、状況によって、特定のディレクトリ内の全てのファイルとディレクトリの所有者を一気に変更する場合があります。そのときは、`chown -R <ユーザ名:グループ名> <対象パス>`で達成することが出来ます。<br>
