--- a/resume/03_ファイル管理.md
+++ b/resume/03_ファイル管理.md
@@ -400,6 +400,6 @@ total 4
 3) 
 
 ## 答え
-1) `cat /etc/passwd` `more /etc/passwd` `less /etc/passwd`
+1) `$ cat /etc/passwd` `$ more /etc/passwd` `$ less /etc/passwd`
 
-2) `vi origin.txt` `ln -s origin.txt origin.link` `cat origin.link`
+2) `$ vi origin.txt` `$ ln -s origin.txt origin.link` `$ cat origin.link`
