--- a/resume/03_ファイル管理.md
+++ b/resume/03_ファイル管理.md
@@ -397,9 +397,11 @@ total 4
 
 2) `origin.txt` を作って中に `origin` と書いて保存してください。 そのファイルのシンボリックリンクを `origin.link` として同じディレクトリ内に作成してください。最後に作成したシンボリックリンクを `cat` で開いて内容が表示されるか確認してください。
 
-3) 
+3) 任意のファイル2つを作り、そのファイル2つを `tar` コマンド1回で `archive.tar.gz（アーカイブ&圧縮形式）` にしてください。
 
 ## 答え
 1) `$ cat /etc/passwd` `$ more /etc/passwd` `$ less /etc/passwd`
 
 2) `$ vi origin.txt` `$ ln -s origin.txt origin.link` `$ cat origin.link`
+
+3) `$ tar cfvz archive.tar.gz test1.txt test2.txt`
