--- a/resume/04_お役立ちコマンドなど.md
+++ b/resume/04_お役立ちコマンドなど.md
@@ -287,3 +287,29 @@ gif画像でその動きを確認してみましょう。下記の画像は、wa
 
 <img src="images/watch.gif">
 
+<br />
+## 確認問題
+1) `cal` コマンドで2001年のカレンダーを表示してください。
+
+2) `wc` コマンドのマニュアルを表示してください。
+
+3) `lsa` と打つと `ls -lha` が実行されるコマンドエイリアスを作ってください。
+
+4) 上で作った `lsa` を4秒おきに継続実行してください。
+
+5) `lsa` を削除してください。
+
+6） 自分のユーザー名をターミナルに表示してください。
+
+## 答え
+1) `$ cal 2001`
+
+2) `$ man wc`
+
+3) `$ alias lsa='ls -lha'`
+
+4) `$ watch -n4 lsa`
+
+5) `$ unalias lsa`
+
+6) `$ whoami`
