--- a/resume/06_パーミッション.md
+++ b/resume/06_パーミッション.md
@@ -290,9 +290,13 @@ total 0
 
 3) 上でパーミッションを変更したファイルにたいして、シンボルモードで「その他のユーザー」の権限を「読み込み」のみにしてください。
 
+4) 任意のディレクトリを作り、そのパーミッションを `444` にしてください。 
+
 ## 答え
 1) `$ umask`
 
 2) `$ chmod 777 file`
 
-3) `$ chmod `
+3) `$ chmod o=r file`
+
+4) `$ mkdir dir` `$ chmod 444 dir`
