--- a/resume/05_ユーザーとグループ.md
+++ b/resume/05_ユーザーとグループ.md
@@ -391,3 +391,16 @@ total 0
 -rw-r--r-- 1 ubuntu ubuntu 0 Oct 16 03:11 sample2
 -rw-r--r-- 1 ubuntu ubuntu 0 Oct 16 03:11 sample3
 ```
+
+<br />
+## 確認問題
+1) `practice_user` というユーザーを作成してください。
+
+2) `practice_user` がOSに追加されたかどうか、ユーザー一覧ファイルを開いて確認してください。
+
+## 答え
+1) `$ adduser practice_user`
+
+2) `$cat /etc/passwd`
+
+3) ``
